# Amphora

./: .gitignore  README.md
app/src-tauri/: Cargo.toml  MIGRATION_SQLX.md  inventory.db  tauri.conf.json
app/src-tauri/.sqlx/: query-0e776e778644bf3c250121b8ad3ba037e699e7bd0c3a654a97181fdd8ba5a098.json  query-0fef35b71e71dbdc4dc74e3cea731459d5321c953c3bf2bef2d956b64c53fac9.json  query-371cf600296f3b62399fe9b595aacfaa74debe128f930571db8115a1c5dec659.json  query-3d78936628fa2f984337c5042ac77138b8a223f3bcecf24a738c73df5db6b1a9.json  query-5c1fd9ce409d80f50ce50cfe36314e8875999717235527afedec76e2ce3922d1.json  query-657d16b3c530a23b7c0e6731b6e21f1a93df6cf054cb1a060decd9c6e570c27b.json  query-6be4006ff823f9f072215c8a546d626253c969467d55d597239d799884d967a1.json  query-790168b29d223b28c22ed5007f7f3421e9f9beac892aa41c2852a879e68c3fa1.json  query-7d83d62b7913e1af8a720d7ad208d671c8bbbe702641f7a77f3376765b2e8ab1.json  query-80be157db7e3c9a52f48e5529ac35cd133fa488d260d3bc486967245d191f866.json  query-83171785f5d4e17ffbd77851d3f38fb6a734e8dd5c06b725413fdfa2c117132e.json  query-88c15010ffbfe60334bf8eb551d96d3f6245cad573eeba51080dcecc49c75980.json  query-97d6ca194e2a43bc58959d4bbb19a7d97a3b44f2402952bfc906f39c6b8b8dda.json  query-9b5402be30190157d62843aeca033cd43a41d6227ae963c1bcc2a3afad1d455c.json  query-9e089a27b4cbece124e181e9a7898aa903cbd8ce793de17d9278c01a4d70e012.json  query-a8ac26ded58c062a12e24a0ec87ceb731afd0a824a9b7bcd141daf4404866e7e.json  query-aa169cf17b1240fabd6ad84e8d34d18fc2cc7e30e11fe4d4201e8ca70790a627.json  (+7 more)
app/src-tauri/src/: commands.rs  database.rs  db.rs  lib.rs  (+1 more)
(+96 files in other folders)
